<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.simplemovies.detailscreen.DetailscreenViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible">


            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/movie_detail_backdrop_contentdescription"
                app:backdrop_path="@{viewmodel.result.backdrop_path}"
                app:layout_constraintBottom_toTopOf="@+id/movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_detail_poster"
                app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_backdrop"
                app:poster_path="@{viewmodel.result.poster_path}"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/movie_title"
                style="@style/H2White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@{viewmodel.result.original_title}"
                app:layout_constraintBottom_toTopOf="@+id/user_score_progressbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Movie title" />


            <ProgressBar
                android:id="@+id/user_score_progressbar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:progress="@{(int) (viewmodel.result.vote_average * 10)}"
                android:progressDrawable="@drawable/score_circle"
                app:layout_constraintBottom_toTopOf="@+id/additional_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/user_score"
                style="@style/RegularWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@{`` + (int)(viewmodel.result.vote_average * 10) + `%`}"
                app:layout_constraintBottom_toBottomOf="@+id/user_score_progressbar"
                app:layout_constraintEnd_toEndOf="@+id/user_score_progressbar"
                app:layout_constraintStart_toStartOf="@+id/user_score_progressbar"
                app:layout_constraintTop_toTopOf="@+id/user_score_progressbar"
                tools:text="55%" />

            <TextView
                android:id="@+id/user_score_text"
                style="@style/RegularWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_score"
                app:layout_constraintBottom_toTopOf="@+id/additional_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toEndOf="@+id/user_score_progressbar"
                app:layout_constraintTop_toTopOf="@+id/user_score_progressbar" />

            <LinearLayout
                android:id="@+id/additional_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_set"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/movie_information_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/info_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movie_release_date"
                        style="@style/RegularWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.result.release_date}"
                        android:textAlignment="center"
                        tools:text="13/03/2005" />

                    <TextView
                        android:id="@+id/movie_playtime"
                        style="@style/RegularWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textAlignment="center"
                        app:minute_converter="@{viewmodel.result.runtime}"
                        tools:text="| 1h 05m" />

                </LinearLayout>

                <TextView
                    android:id="@+id/movie_genres"
                    style="@style/RegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:listGenres="@{viewmodel.result.genres}"
                    tools:text="Action, Drama, Romance" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/cast_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/movie_tagline"
                    style="@style/RegularWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@{viewmodel.result.tagline}"
                    android:textAlignment="center"
                    android:textColor="#B3ffff"
                    android:textStyle="italic"
                    tools:text="Movie tagline" />

                <TextView
                    android:id="@+id/movie_description_label"
                    style="@style/H3White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/movie_detail_description"
                    tools:text="Overview" />

                <TextView
                    android:id="@+id/movie_description"
                    style="@style/RegularWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@{viewmodel.result.overview}" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cast_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/protagonists_label"
                    style="@style/H3White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/movie_detail_protagonist"
                    android:textColor="@android:color/black"
                    tools:text="Protagonists" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:castData="@{viewmodel.movieCast}"
                    tools:listitem="@layout/cast_view_item" />

                <Button
                    android:id="@+id/show_cast"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_screen_cast_button"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                app:apiStatus="@{viewmodel.apiStatus}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/api_state_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/api_state_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="Something went wrong, check your connection and try again!" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>